--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     ></script>
   </head>
   <body class="container-fluid">
-    <h1>UI-Developer</h1>
+    <h1 class="bg-info text-white text-center p-2">UI-Developer</h1>
     <p>My skills: HTML , CSS , Bootstrap..</p>
     <img src="./public/images/kids-fashion.jpg" width="200" >
+    <h1 class="bg-dark text-white text-center">My Projects</h1>
+    <a class="btn btn-primary" href="./public/finder.html">Finder website click here</a>
   </body>
 </html>
