--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a class="btn btn-primary" href="./public/finder.html"
       >Finder website click here</a
     >
-    <a class="btn btn-primary" href="./public/finder.html"
+    <a class="btn btn-primary" href="./public/birthday.html"
       >Kritika click here</a
     >
   </body>
