--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
     <a class="btn btn-primary" href="./public/finder.html"
       >Finder website click here</a
     >
-    <a class="btn btn-primary" href="./public/birthday.html"
-      >Kritika click here</a
+    <a
+      class="btn btn-primary"
+      href="./public/birthday.html"
+      <a
+      class="btn btn-primary"
+      href="./public/birthday2.html"
+      >suraj</a
     >
   </body>
 </html>
