--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
     <a class="btn btn-primary" href="./public/finder.html"
       >Finder website click here</a
     >
-    <a
-      class="btn btn-primary"
-      href="./public/birthday.html"
-      <a
-      class="btn btn-primary"
-      href="./public/birthday2.html"
-      >suraj</a
+    <a class="btn btn-primary" href="./public/birthday.html"
+      >Kritika click here</a
+    >
+    <a class="btn btn-primary" href="./public/birthday2.html"
+      >Suraj click here</a
     >
   </body>
 </html>
