--- a/public/birthday2.html
+++ b/public/birthday2.html
@@ -127,7 +127,7 @@
     <div class="message" id="message">
       <h1>🎉 Happy Birthday 🎉</h1>
       <h2 id="wishName"></h2>
-      <img src="../public/images/pic2.jpg" alt="Birthday Person" />
+      <img src="../public/images/pic2.jpeg" alt="Birthday Person" />
     </div>
 
     <script>
